# watsin-core

./: .gitignore  Licence.md  pyproject.toml
watsin_core/: __init__.py  create_app.py
watsin_core/app/: app_utils.py  inventory.py
watsin_core/app/Items/: __init__.py  items.py
