[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "watsin_core"
version = "0.0.1"
description = "Core library for 'Watsin' app"
dependencies = [typing, uuid]

[tool.setuptools]
# Questo comando cerca automaticamente tutte le sottocartelle con __init__.py
packages = {find = {where = ["."]}}